--- a/info.yaml
+++ b/info.yaml
@@ -1,6 +1,6 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  wokwi_id:     423087096539689985       # Set this to the ID of your Wokwi project (the number from the project's URL)
   title:        "Tiny Tapeout 10 prj1"      # Project title
   author:       "Ramprakash Baskar"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
